--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 <div id="carousel1" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="{{ url_for('static', filename='original.jpg') }}" alt="Original slide">
+        <img class="d-block w-100" src="{{ resized_img_src('original.jpg', width=400, height=300, mode='crop', quality=95) }}" alt="Original slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/static/img1.jpg" alt="First slide">
@@ -20,11 +20,11 @@
         <img class="d-block w-100" src="/static/img4.jpg" alt="Fourth slide">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carousel1" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carousel1" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
