--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,4 +22,6 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+
+<img class="d-block w-100" src="{{ url_for('images.crop', filename='test/img1.jpg', width=800, height=600, quality=95) }}" alt="Original">
 {% endblock %}
