--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse navbar-default">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collaspe-1" aria-expanded="false">
@@ -17,6 +17,12 @@
                 <a class="navbar-brand" href="{{ url_for('index') }}">One Stop Photoshop</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('index') }}">Home</a></li>
+                    <li><a href="{{ url_for('prev') }}"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a></li>
+                    <li><a href="{{ url_for('random') }}"></span><span class="glyphicon glyphicon-random" aria-hidden="true"></span></a></li>
+                    <li><a href="{{ url_for('next') }}"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a></li>
+                </ul>
             </div>
         </div>
     </nav>
