--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,9 +18,8 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('prev') }}"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a></li>
-                    <li><a href="{{ url_for('random') }}"></span><span class="glyphicon glyphicon-random" aria-hidden="true"></span></a></li>
+                    <li><a href="{{ url_for('random') }}">Random</a></li>   
                     <li><a href="{{ url_for('next') }}"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a></li>
                 </ul>
             </div>
