--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,59 +8,8 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{
 }
 </style>
 
-<!--
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="item active">
-        <img class="d-block w-100" src="{{ url_for('images.crop', filename='original.jpg', width=800, height=600, quality=95) }}" alt="Original">
-      </div>
-      <div class="item">
-        <img class="d-block w-100" src="{{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }}" alt="Second slide">
-      </div>
-      <div class="item">
-        <img class="d-block w-100" src="{{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }}" alt="Third slide">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="false"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="false"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-<img class="d-block w-100" src="{{ url_for('images.crop', filename='test/img1.jpg', width=800, height=600, quality=95) }}" alt="Original">
--->
-
 <div class="container">
-    <div class="row imagetiles">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('test/img1.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('test/img2.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('img3.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-    </div>
-    <div class="row imagetiles">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('test/img1.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('test/img2.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6">
-            <img src={{ resized_img_src('img3.jpg', width=800, height=600, mode='crop', quality=95) }} class="img-responsive">
-        </div>
-    </div>
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
 </div>
 {% endblock %}
