--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,5 +11,12 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{
 <div class="container">
     {% include '_image_tiles.html' %}
     {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
+    {% include '_image_tiles.html' %}
 </div>
 {% endblock %}
