--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -1,28 +1,42 @@
 {% extends "base.html" %}
 
 {% block app_content %}
-
+<style>
+.carousel-control.left, 
+.carousel-control.right {
+    background-image: none
+}
 </style>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+  
+    <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img class="d-block w-100" src="{{ url_for('images.crop', filename='original.jpg', width=800, height=600, quality=95) }}" alt="Original">
+        <img class="img-responsive center-block" src="{{ url_for('static', filename='test/img2.jpg') }}" alt="Los Angeles">
       </div>
       <div class="item">
-        <img class="d-block w-100" src="{{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }}" alt="Second slide">
+        <img class="img-responsive center-block" src="{{ resized_img_src('img2.jpg', width=1000, height=1000, mode='fit', quality=95) }}" alt="Chicago">
       </div>
+  
       <div class="item">
-        <img class="d-block w-100" src="{{ resized_img_src('original.jpg', width=800, height=600, mode='crop', quality=95) }}" alt="Third slide">
+        <img class="img-responsive center-block" src="{{ resized_img_src('original.jpg', width=1000, height=1000, mode='fit', quality=95) }}" alt="New York">
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="false"></span>
+  
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="false"></span>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
   </div>
-<img class="d-block w-100" src="{{ url_for('images.crop', filename='test/img1.jpg', width=800, height=600, quality=95) }}" alt="Original">
 {% endblock %}
