--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@ div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{
 </style>
 
 <div class="container">
-    {% for post_row in posts|batch(4, '&nbsp;') %}
+    {% for post_row in posts|batch(4, '') %}
         <div class="row imagetiles">
             {% for post in post_row %}
                 {% include '_image_tile.html' %}
