--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,10 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block head %}
+{{super()}}
+<link rel="icon" type="image/ico" href="/static/favicon.ico">
+{% endblock %}
+
 {% block title %}
     {{ title }}
 {% endblock %}
