--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -10,23 +10,28 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
+      {% for index in range(post.image_count) %}
+      {% if loop.first %}
+      <li data-target="#myCarousel" data-slide-to="{{ index }}" class"active"></li>
+      {% else %}
+      <li data-target="#myCarousel" data-slide-to="{{ index }}"></li>
+      {% endif %}
+      {% endfor %}
     </ol>
   
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
+    {% for index2 in range(post.image_count) %}
+    {% if loop.first %}
       <div class="item active">
-        <img class="img-responsive center-block" src="{{ url_for('static', filename='test/img2.jpg') }}" alt="Los Angeles">
+        <img class="img-responsive center-block" src="{{ url_for('static', filename='{}/img{}.jpg'.format(post.folder, index2 + 1)) }}" alt="Img">
       </div>
-      <div class="item">
-        <img class="img-responsive center-block" src="{{ resized_img_src('img2.jpg', width=1000, height=1000, mode='fit', quality=95) }}" alt="Chicago">
-      </div>
-  
-      <div class="item">
-        <img class="img-responsive center-block" src="{{ resized_img_src('original.jpg', width=1000, height=1000, mode='fit', quality=95) }}" alt="New York">
-      </div>
+    {% else %}
+        <div class="item">
+            <img class="img-responsive center-block" src="{{ url_for('static', filename='{}/img{}.jpg'.format(post.folder, index2 + 1)) }}" alt="Img">
+        </div>
+    {% endif %}
+    {% endfor %}
     </div>
   
     <!-- Left and right controls -->
