Background and more stuff I don't remember

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,9 +23,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{ url_for('prev') }}"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></a></li>
                 <li><a href="{{ url_for('random') }}">Random</a></li>   
-                <li><a href="{{ url_for('next') }}"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a></li>
             </ul>
         </div>
     </div>
@@ -33,6 +31,12 @@
 {% endblock %}
 
 {% block content %}
+<style>
+body {
+    background: url(/static/wavegrid.png);
+    background-repeat: repeat;
+}
+</style>
 <div class="container">
     {% with messages = get_flashed_messages() %}
         {% if messages %}
