--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -7,7 +7,7 @@
     background-image: none
 }
 </style>
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       {% for index in range(post.image_count) %}
