--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,26 @@
 {% endblock %}
 
 {% block navbar %}
+<style>
+.navbar {
+  min-height: 80px;
+}
+.navbar-brand {
+  padding: 0 15px;
+  height: 80px;
+  line-height: 80px;
+  font-size: 25px;
+}
+@media (min-width: 768px) {
+  .navbar-nav > li > a {
+    /* (80px - line-height of 27px) / 2 = 26.5px */
+    padding-top: 26.5px;
+    padding-bottom: 26.5px;
+    line-height: 27px;
+    font-size: 20px;
+  }
+}
+</style>
 <nav class="navbar navbar-inverse navbar-default">
     <div class="container">
         <div class="navbar-header">
